--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.5.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "org.flywaydb.flyway" version "7.12.0"
 }
 
 group = 'com.danisanchez'
@@ -13,11 +14,23 @@ repositories {
 }
 
 dependencies {
+	implementation'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'com.h2database:h2'
+	implementation 'org.springframework.data:spring-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+//	implementation 'javax.validation:validation-api:1.0.0.GA'
+
+//	compile 'org.flywaydb:flyway-core:7.12.0'
 }
 
 test {
 	useJUnitPlatform()
 }
+
+//flyway {
+//	url = 'jdbc:h2:file:./target/foobar'
+//	user = 'sa'
+//}
